--- a/about.html
+++ b/about.html
@@ -57,7 +57,7 @@
         -Design different platform interface include website, APP and pay station.<br>
         -Find solutions by using usability testing or user behavior research to optimize user 
         experience. <br>
-        -Work along with engineer and product manager to deliver product in time</p>
+        -Work along with engineer, UI/UX designer and product manager to deliver product in time</p>
       <p class="font-bold font-subdark">UI/UX design team leader</p>
       <p class="font-gray">As the design team leader, I hold design sharing meetings every two weeks. These sessions help team members bring up any challenges they're facing so we can brainstorm solutions together. This approach improves how we handle issues when working independently. It encourages team members to openly discuss design-related problems in meetings and collectively come up with better ideas.</p>
 
