--- a/about.html
+++ b/about.html
@@ -52,13 +52,13 @@
       <h5>Work experience</h5>
       <p class="font-gray">Sep. 2022 - Present</p>
       <p class="font-bold font-subdark">Senior Product Designer | 遠創智慧股份有限公司 FETC International Co., LTD.</p>
-      <p class="font-gray">Mastering the overall design and business strategy of the product, I focus on ensuring the product meets market demand and business goals. I collaborate with Business Development (BD) to present design concepts to business partners and fully participate in the design and development of the product.<br><br>
+      <p class="font-gray">Mastering the overall design and business strategy of the product, I focus on ensuring the product meets market demand and business goals. I collaborate with Business Development (BD) to present design concepts to business partners and fully participate in the design and development of the product.<br>
         -Conduct competitor study and user research for various Product with parking business.<br>
         -Design different platform interface include website, APP and pay station.<br>
         -Find solutions by using usability testing or user behavior research to optimize user 
         experience. <br>
         -Work along with engineer, UI/UX designer and product manager to deliver product in time.</p>
-      <p class="font-bold font-subdark">UI/UX design team leader</p>
+      <p class="top-16 font-bold font-subdark">UI/UX design team leader</p>
       <p class="font-gray">As the design team leader, I hold design sharing meetings every two weeks. These sessions help team members bring up any challenges they're facing so we can brainstorm solutions together. This approach improves how we handle issues when working independently. It encourages team members to openly discuss design-related problems in meetings and collectively come up with better ideas.</p>
 
       <p class="top-16 font-gray">Apr. 2022 - Aug. 2022</p>
