--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
       </a>
     </div>
   </div>
-  <div id="pic-banner" class="col-md-4">
+  <!--<div id="pic-banner" class="col-md-4">
     <img src="img/ui_web_news.jpg" width="550" height="500" class="img-fluid">
     <div class="caption">
       <a href="UI_news.html" class="captiondetails">
@@ -131,7 +131,7 @@
         </div>
       </a>
     </div>
-  </div>
+  </div>-->
   <!--<div id="pic-banner" class="col-md-4">
     <img src="img/ui_fundschip.gif" width="550" height="500" class="img-fluid">
     <div class="caption">
