--- a/about.html
+++ b/about.html
@@ -34,7 +34,7 @@
   </div>
   <div class="col-md-6 about_me">
     <h3>Hi there, I'm Delphine Lan! 👋 </h3>
-    <p class="font-subdark">I am responsible for product experience design, integrating human-centric principles, market insights, and innovative thinking to plan processes and interfaces that meet user needs. I contribute to strategic planning, drive continuous product growth, and enhance UI/UX design.</p>
+    <p class="font-subdark">I am responsible for product experience design, integrating human-centric principles, market insights, and innovative thinking to plan processes and interfaces that meet user needs. I contribute to driving product growth and enhancing UI/UX design.</p>
     <h5>Design</h5>
     <p class="font-gray"> ▪ User interface design and process plan. <br>
       ▪ User experience research and design.<br> 
