--- a/about.html
+++ b/about.html
@@ -30,7 +30,7 @@
   <h2 class="title top-25"> ABOUT ME </h2>
   <hr>
   <div class="col-md-5">
-    <img src="img/pic.jpg" class="img-about">
+    <img src="img/pic.png" class="img-about">
   </div>
   <div class="col-md-6 about_me">
     <h3>Hi there, I'm Delphine Lan! 👋 </h3>
