--- a/about.html
+++ b/about.html
@@ -121,9 +121,9 @@
 </div>
 <div class="bottom-info container">
     <ul>
-        <li><a href="https://codepen.io/DelphineLan/" target="_blank"><img src="img/icon_codepen.svg" width="30" height="30"></a></li>
+        <!--<li><a href="https://codepen.io/DelphineLan/" target="_blank"><img src="img/icon_codepen.svg" width="30" height="30"></a></li>-->
         <li><a href="https://tw.linkedin.com/in/delphine-lan-756b11b9" target="_blank"><img src="img/icon_linkedin.svg" width="30" height="30"></a></li>
-        <li><a href="https://www.instagram.com/delphine_painting/" target="_blank"><img src="img/icon_ig.svg" width="30" height="30"></a></li>
+        <li><a href="https://www.instagram.com/delphinelan.art?utm_source=ig_web_button_share_sheet&igsh=ZDNlZDc0MzIxNw==" target="_blank"><img src="img/icon_ig.svg" width="30" height="30"></a></li>
         <li><a href="mailto:sun7722blue@hotmail.com" target="_blank"><img src="img/icon_email.svg" width="30" height="30"></a></li>
         <li><a href="Delphine_CV.pdf" target="_blank"><img src="img/icon_cv.svg" width="30" height="30"></a></li>
     </ul>
