--- a/about.html
+++ b/about.html
@@ -54,7 +54,7 @@
       <p class="font-bold font-subdark">Senior Product Designer | 遠創智慧股份有限公司 FETC International Co., LTD.</p>
       <p class="font-gray">Mastering the overall design and business strategy of the product, I focus on ensuring the product meets market demand and business goals. I collaborate with Business Development (BD) to present design concepts to business partners and fully participate in the design and development of the product.<br>
         -Conduct competitor study and user research for various Product with parking business.<br>
-        -Design different platform interface include website, APP and pay station.<br>
+        -Design different platform interface include website, APP, pay station and Telematics(CarPlay & Android Auto).<br>
         -Find solutions by using usability testing or user behavior research to optimize user 
         experience. <br>
         -Work along with engineer, UI/UX designer and product manager to deliver product in time.</p>
